Automatically backed up by Learn

--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,4 +1,8 @@
 <h1>Sign Up Below:</h1>
 <form class="" action="/registrations" method="post">
-
+  <p><input type="text" name="" value=""></p>
+  <p><input type="text" name="" value=""></p>
+  <p><input type="text" name="" value=""></p>
+  <input type="submit" name="" value="">
+  
 </form>
