Automatically backed up by Learn

--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -3,6 +3,6 @@
   <p><input type="text" name="" value=""></p>
   <p><input type="text" name="" value=""></p>
   <p><input type="text" name="" value=""></p>
-  <input type="submit" name="" value="">
+  <input type="submit">
 
 </form>
