Automatically backed up by Learn

--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,8 +1,8 @@
 <h1>Sign Up Below:</h1>
 <form class="" action="/registrations" method="post">
-  <p><input type="text" name="" value=""></p>
-  <p><input type="text" name="" value=""></p>
-  <p><input type="text" name="" value=""></p>
+  <p><input type="text" name="name"></p>
+  <p><input type="text" name="email"></p>
+  <p><input type="text" name="password"></p>
   <input type="submit">
 
 </form>
