--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,7 +1,7 @@
 <h1>Sign Up Below:</h1>
-<form class="" action="/registrations" method="post">
+<form action="/registrations" method="post">
   <p>Name: <input type="text" name="name"></p>
   <p>Email: <input type="text" name="email"></p>
   <p>Password: <input type="text" name="password"></p>
-  <input type="submit">
+  <input type="submit" name="Sign Up">
 </form>
